--- a/amaroKontrol_wear/mobile/src/main/res/layout/dialog_update.xml
+++ b/amaroKontrol_wear/mobile/src/main/res/layout/dialog_update.xml
@@ -31,6 +31,7 @@
         android:layout_width="match_parent"
         android:paddingTop="10dp"
         android:clipToPadding="false"
+        android:scrollbars="vertical"
         android:layout_height="wrap_content" >
 
         <LinearLayout
@@ -44,7 +45,6 @@
                 android:layout_height="wrap_content"
                 app:font="light"
                 android:layout_marginBottom="10dp"
-
                 android:text="@string/help_update_subtitle" />
             
             <com.mv2studio.amarok.kontrol.ui.View.CustomTextView
@@ -95,6 +95,31 @@
                 android:layout_height="wrap_content"
                 app:font="light"
                 android:text="@string/help_restart" />
+
+            <View
+                android:layout_height="1dp"
+                android:layout_width="match_parent"
+                android:background="#aaa"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp" />
+
+            <com.mv2studio.amarok.kontrol.ui.View.CustomTextView
+                style="@style/HelpStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:font="light"
+                android:layout_marginBottom="10dp"
+                android:text="@string/help_update_git" />
+
+            <ImageView
+                android:id="@+id/githubImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/github_logo"
+                android:scaleType="centerInside"
+                />
         </LinearLayout>
     </ScrollView>
 
